@startuml
class Vehiculo {
-patente: String
-modelo: String
-motor: Motor
-conductor: Conductor
+setConductor(nuevo: Conductor): void
}

class Motor {
-tipo: String
-numeroSerie: String

}

class Conductor {
-nombre: String
-licencia: String
+setVehuculo(nuevo: Vehiculo): void
}

Vehiculo "1" o-- "1" Motor     : agregación
Vehiculo "1" -- "1" Conductor  : asociación (bi)
@enduml